--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "framer-motion": "^11.11.9",
     "next": "15.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-flags-select": "^2.2.3",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
