--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
     "eslint": "^8",
