--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-icons": "^5.3.0",
+    "react-spinners": "^0.14.1",
     "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
